Correct photos wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -301,12 +301,14 @@ ul {
 .photo-container .photos {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .photo-container .photo-column{
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 300px;
+    min-width: 25%;
 }
 
 .photo-container .photos img {
